Toolbar improvements, Centralisation of settings for checkin, log into last event
Manifest cleanup, activity navigation improvements.
Checkin settings are now stored using core.Settings
More Util functions, for toolbar and whether window adjusts to keyboard
Checkin login cleanup, looks more alike to the core login activity
Can now just open most recent event for easier login 
Full german support in checkin app, excl. strings from the server
Checkin: font size decreases for long responses from server
Checkin press enter during scanActivity in legi text field to submit
Logo is now centered in toolbar :)

--- a/app/src/main/res/layout/checkin_activity_scan.xml
+++ b/app/src/main/res/layout/checkin_activity_scan.xml
@@ -103,10 +103,9 @@
         android:layout_marginStart="8dp"
         android:maxLines="100"
         android:scrollHorizontally="false"
-        android:textAlignment="center"
+        android:textAppearance="@style/Header"
         android:textColor="@android:color/white"
         android:textSize="128sp"
-        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,8 +130,8 @@
         android:layout_marginEnd="6dp"
         android:layout_marginTop="4dp"
         android:text="@string/check_in"
+        android:textAppearance="@style/Subheader"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/CheckInSwitch"
@@ -145,8 +144,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="4dp"
         android:text="@string/check_out"
+        android:textAppearance="@style/Subheader"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/CheckInSwitch"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -162,9 +161,12 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Legi Nr, Nethz, Email"
+        android:imeOptions="actionGo"
         android:inputType="text"
+        android:textAppearance="@style/Body"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/SubmitLegiNrButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CheckInSwitch" />
@@ -177,6 +179,7 @@
         android:layout_marginTop="10dp"
         android:onClick="SubmitLegiNrFromTextField"
         android:text="@string/submit"
+        android:textAppearance="@style/Subheader"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/LegiInputField"
         app:layout_constraintTop_toBottomOf="@+id/CheckInLabel" />
@@ -188,13 +191,15 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:gravity="top|center"
         android:maxLines="100"
         android:scrollHorizontally="false"
-        android:text="@string/valid"
+        android:text="No User found with nethz: rbarton@ethz.ch.student"
         android:textAlignment="center"
+        android:textAppearance="@style/Header"
         android:textColor="@android:color/white"
-        android:textSize="28sp"
-        android:visibility="invisible"
+        android:textSize="30sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/RightStatLabel"
         app:layout_constraintStart_toEndOf="@+id/LeftStatLabel"
         app:layout_constraintTop_toBottomOf="@+id/SubmitLegiNrButton" />
@@ -205,9 +210,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="35dp"
         android:text="@string/wait"
-        android:textAlignment="center"
+        android:textAppearance="@style/Subheader"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -221,9 +225,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="16dp"
         android:text="0"
-        android:textAlignment="viewStart"
+        android:textAppearance="@style/Header"
         android:textColor="@android:color/white"
-        android:textSize="28sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LeftStatDescription" />
@@ -236,9 +240,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginEnd="16dp"
         android:text="0"
-        android:textAlignment="viewEnd"
+        android:textAppearance="@style/Header"
         android:textColor="@android:color/white"
-        android:textSize="28sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/RightStatDescription" />
@@ -258,7 +262,7 @@
         app:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp" />
+        app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp"/>
 
     <TextView
         android:id="@+id/LeftStatDescription"
@@ -266,9 +270,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:textAlignment="textStart"
+        android:textAppearance="@style/Body"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LegiInputField" />
@@ -279,9 +282,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="4dp"
-        android:textAlignment="textEnd"
+        android:textAppearance="@style/Body"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LegiInputField" />
