--- a/app/src/main/res/layout/checkin_list_item_header.xml
+++ b/app/src/main/res/layout/checkin_list_item_header.xml
@@ -18,8 +18,8 @@
         android:layout_weight="1"
         android:paddingLeft="12dp"
         android:text=""
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textAppearance="@style/Header"
+        android:textSize="24sp" />
 
 
 </LinearLayout>
