--- a/app/src/main/res/layout/checkin_list_item_member.xml
+++ b/app/src/main/res/layout/checkin_list_item_member.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="12dp"
                 android:text="TextView"
+                android:textAppearance="@style/Header"
                 android:textSize="18sp" />
 
             <LinearLayout
