Renaming Files for consistency

--- a/app/src/main/res/layout/checkin_member_list.xml
+++ b/app/src/main/res/layout/checkin_member_list.xml
@@ -34,5 +34,5 @@
         app:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_refresh_32dp" />
+        app:srcCompat="@drawable/ic_refresh" />
 </android.support.constraint.ConstraintLayout>
