--- a/app/src/main/res/layout/core_main.xml
+++ b/app/src/main/res/layout/core_main.xml
@@ -28,7 +28,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/core_ac_main_bottom_nav">
+            app:menu="@menu/core_main_bottom_nav">
 
         </android.support.design.widget.BottomNavigationView>
 
@@ -48,7 +48,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/core_ac_main_drawer_header"
-        app:menu="@menu/core_ac_main_drawer" />
+        app:headerLayout="@layout/core_main_drawer_header"
+        app:menu="@menu/core_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
