--- a/app/src/main/res/layout/core_intro.xml
+++ b/app/src/main/res/layout/core_intro.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_amiv_logo_white" />
 
-    <ch.amiv.android_app.ui.NonSwipeableViewPager
+    <ch.amiv.android_app.util.ui.NonSwipeableViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
