--- a/app/src/main/res/layout/jobs_detail.xml
+++ b/app/src/main/res/layout/jobs_detail.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_include">
 
-        <ch.amiv.android_app.util.CustomNetworkImageView
+        <ch.amiv.android_app.util.ui.CustomNetworkImageView
             android:id="@+id/companyLogo"
             android:layout_width="match_parent"
             android:layout_height="@dimen/company_logo_height_detail"
