Implemented parsing of event additional_fields into java class (AdditFields)
Also fixed small bug with wrong title being renamed in intro_pref screen

--- a/app/src/main/res/layout/core_intro_slide_pref_detail.xml
+++ b/app/src/main/res/layout/core_intro_slide_pref_detail.xml
@@ -7,7 +7,7 @@
     android:background="@color/primary">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/title_enum_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -34,7 +34,7 @@
         android:background="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/title_enum_view" />
 
     <ScrollView
         android:layout_width="match_parent"
