--- a/app/src/main/res/layout/core_main_list_item_keyval.xml
+++ b/app/src/main/res/layout/core_main_list_item_keyval.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:orientation="horizontal"
-        android:paddingTop="8dp"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp" >
+        android:paddingTop="8dp"
+        android:paddingRight="8dp">
 
         <TextView
             android:id="@+id/keyField"
